# cmake-sandbox

./: .gitignore  README.md  note.txt
01_exe/src/: CMakeLists.txt  hello.cpp
02_lib/src/: CMakeLists.txt  fibonacci.h  main.cpp
02_lib/src/fibonacci/: fibonacci.cpp
03_lib_object/src/: CMakeLists.txt
04_option/src/: CMakeLists.txt
05_system_info/: CMakeLists.txt
06_lib_under_subdir/: CMakeLists.txt
06_lib_under_subdir/app/: CMakeLists.txt
06_lib_under_subdir/app/src/: main.cpp
